// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense of value €94.34 1`] = `
<div>
  <h2>
    1 expense: 
    94.34 $
  </h2>
</div>
`;

exports[`should render 2 expenses totalling €94.34 1`] = `
<div>
  <h2>
    2
     expenses totalling: 
    94.34 $
  </h2>
</div>
`;

exports[`should render No Expenses 1`] = `
<div>
  <h2>
    No expenses
  </h2>
</div>
`;
